Uses proper plugin name