@@ -617,12 +617,11 @@ limitations under the License.
         <pluginManagement>
           <plugins>
             <plugin>
-              <groupId>org.apache.maven.surefire</groupId>
-              <artifactId>surefire-junit4</artifactId>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                 <argLine>--illegal-access=permit</argLine>
                 <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                <argLine>--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
                 <argLine>-Dillegal-access=permit</argLine>
               </configuration>
             </plugin>
